# rake

./: .gitignore  Cargo.toml  Rake.sln  readme.md
dotnet/Rake.Gui.Model/: Rake.Gui.Model.csproj
dotnet/Rake.Gui.Model/Commands/: EditorCommands.cs  GlobalCommands.cs
dotnet/Rake.Gui.Model/Native/: IOpenDialog.cs  ISaveDialog.cs
dotnet/Rake.Gui.Model/Native/Windows/: OpenDialog.cs  SaveDialog.cs
dotnet/Rake.Gui.Win/: Rake.Gui.Win.csproj
dotnet/Rake.Gui.Win/View/: App.xaml  App.xaml.cs  EditMenuItem.xaml  EditMenuItem.xaml.cs  FileMenuItem.xaml  FileMenuItem.xaml.cs  HelpMenuItem.xaml  HelpMenuItem.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Status.xaml  Status.xaml.cs  TopMenu.xaml  TopMenu.xaml.cs
dotnet/Rake.Gui.Win/ViewModel/: EditMenuItem.cs  FileMenuItem.cs  MainWindow.cs
dotnet/Rake.Gui.Win/ViewModel/Utilities/: CloseHandler.cs  IRequestClose.cs
rust/rake/: Cargo.toml
rust/rake/src/: lib.rs
rust/rake/src/ffi/: handle_owned.rs  handle_shared.rs  mod.rs  rake_result.rs  thread_bound.rs
rust/rake/src/utils/: mod.rs  option_ext.rs  result_ext.rs
