[package]
name = "Rake"
version = "0.1.0"
edition = "2021"

[lib]
name = "rake"
path = "src/lib.rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rand = "0.8.5"
winit = "0.29"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
ultraviolet = { features = ["int"], version = "0.9" }
net-fi = { git = "https://github.com/mbartelsm/net-fi.git" }

[dev-dependencies]
test-case = "3.3"
